--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="initial-scale=0.4, user-scalable=no">
 	<link rel="shortcut icon" href="#"/>
-	<link rel="stylesheet" href="https://g.alicdn.com/apsara-media-box/imp-web-player/2.18.1/skins/default/aliplayer-min.css"/>
-	<script async defer src="https://g.alicdn.com/apsara-media-box/imp-web-player/2.18.1/aliplayer-min.js" onload="resizePlayers().then(enablePlayers());"></script>
+	<link rel="stylesheet" href="https://g.alicdn.com/apsara-media-box/imp-web-player/2.20.2/skins/default/aliplayer-min.css"/>
+	<script async defer src="https://g.alicdn.com/apsara-media-box/imp-web-player/2.20.2/aliplayer-h5-min.js" onload="resizePlayers().then(enablePlayers());"></script>
 	<script async defer src="xdcheckin/static/locations.js" onload="listifyLocations().then(() => {if (chaoxingLogin.success) document.getElementById('chaoxing-locations-button').style.display = 'block';});"></script>
 	<script async defer src="static/classrooms.js" onload="listifyClassrooms().then(resizePlayers()).then(enablePlayers());"></script>
 	<script async defer src="https://xdcheckin.git.pnxlr.eu.org/src/backend/static/classrooms.js" onload="listifyClassrooms();"></script>
