--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -25,10 +25,10 @@
 
 		<div id="chaoxing-buttons" class="div-center">
 			<button id="chaoxing-login-button" onclick="chaoxingLogin();">Chaoxing Login</button>
-			<button id="chaoxing-curriculum-button" onclick="hideOtherDivs('curriculum-list-div'); displayDiv('curriculum-list-div');" style="display: none">Show Curriculum</button>
-			<button id="chaoxing-locations-button" onclick="hideOtherDivs('locations-list-div'); displayDiv('locations-list-div');" style="display: none">Select Location</button>
+			<button id="chaoxing-curriculum-button" onclick="hideOtherDivs('curriculum-list-div').then(displayDiv('curriculum-list-div'));" style="display: none">Show Curriculum</button>
+			<button id="chaoxing-locations-button" onclick="hideOtherDivs('locations-list-div').then(displayDiv('locations-list-div'));" style="display: none">Select Location</button>
 			<button id="chaoxing-input-location-button" onclick="inputLocation();" style="display: none">Input Location</button>
-			<button id="chaoxing-activities-button" onclick="if (document.getElementById('activities-list-div').style.display == 'none') {hideOtherDivs('activities-list-div'); getActivities().then(displayDiv('activities-list-div'));} else displayDiv('activities-list-div');" style="display: none">Check Activities</button>
+			<button id="chaoxing-activities-button" onclick="if (document.getElementById('activities-list-div').style.display == 'none') {hideOtherDivs('activities-list-div').then(getActivities()).then(displayDiv('activities-list-div'));} else displayDiv('activities-list-div');" style="display: none">Check Activities</button>
 		</div>
 		<div id="curriculum-list-div" style="display: none"></div>
 		<div id="locations-list-div" style="display: none">
@@ -37,7 +37,7 @@
 		<div id="activities-list-div" style="display: none"></div>
 
 		<div id="classrooms-buttons-div" class="div-center" style="display: none;">
-			<button onclick="hideOtherDivs('classrooms-list-div'); displayDiv('classrooms-list-div');">Select Classroom</button>
+			<button onclick="hideOtherDivs('classrooms-list-div').then(displayDiv('classrooms-list-div'));">Select Classroom</button>
 			<button onclick="randClassroom();">I'm Feeling Lucky</button>
 			<button onclick="inputClassroom();">Load URL</button>
 			<button id="extract-classroom-button" onclick="extractClassroom();" style="display: none;">Extract URL</button>
